Tue Jan 26 20:24:04 2010  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/eq.rb: fix circular requrie in drb.
          reported by akr. see [ruby-dev:40156] [ruby-core:27661]

Tue Jan 26 20:13:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (rb_gzfile_s_wrap): add rdoc.
	  patched by Hugh Sasse [ruby-core:27692]

	* ext/zlib/doc/zlib.rd: removed.

Tue Jan 26 02:25:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_split): add rdoc.
	  patched by Hugh Sasse [ruby-core:27819]

Mon Jan 25 23:24:26 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_string.rb (test_split): add tests.
	  patched by Hugh Sasse [ruby-core:27794]

Fri Jan 22 01:22:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (thread_timer, rb_thread_stop_timer): check the timing of
	  stopping timer.  patch from KOSAKI Motohiro <kosaki.motohiro _AT_
	  jp.fujitsu.com> via IRC.

	* eval.c (rb_thread_start_timer): NetBSD5 seems to be hung when calling
	  pthread_create() from pthread_atfork()'s parent handler.

	* io.c (pipe_open): workaround for NetBSD5. stop timer thread before
	  fork(), and restart it after fork() on parent, and on child if
	  needed.

	* process.c (rb_f_fork, rb_f_system): ditto.

	  these changes are tested by naruse.  fixed [ruby-dev:40074]

Tue Jan 19 20:00:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/resolv.rb (Resolv::Config.default_config_hash): return an
	  empty hash when resolv.conf is not available.  [ruby-core:27620]

Tue Jan 19 14:29:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (clean-ext): allow glob patterns.

	* ext/extmk.rb: ditto.

Mon Jan 18 17:16:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/httpservlet/filehandler.rb (make_partial_content):
	  add bytes-unit.  [ruby-dev:40030]

Mon Jan 18 15:49:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPHeader#{content_range,range_length}):