@@ -3267,7 +3267,7 @@ retry:
     }
 
   retry:
-#ifdef __NetBSD__
+#if defined(__NetBSD__) || defined(__APPLE__)
     rb_thread_stop_timer();
 #endif
     switch ((pid = fork())) {
@@ -3297,7 +3297,7 @@ retry:
 		    ruby_sourcefile, ruby_sourceline, pname);
 	    _exit(127);
 	}
-#ifdef __NetBSD__
+#if defined(__NetBSD__) || defined(__APPLE__)
 	rb_thread_start_timer();
 #endif
 	rb_io_synchronized(RFILE(orig_stdout)->fptr);
@@ -3305,7 +3305,7 @@ retry:
 	return Qnil;
 
       case -1:			/* fork failed */
-#ifdef __NetBSD__
+#if defined(__NetBSD__) || defined(__APPLE__)
 	rb_thread_start_timer();
 #endif
 	if (errno == EAGAIN) {
@@ -3328,7 +3328,7 @@ retry:
 	break;
 
       default:			/* parent */
-#ifdef __NetBSD__
+#if defined(__NetBSD__) || defined(__APPLE__)
 	rb_thread_start_timer();
 #endif
 	if (pid < 0) rb_sys_fail(pname);
